--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,7 @@ Desabilita Delay nos Dispositivos Mobile
   font-weight: 700;
   letter-spacing: 2px;
   text-transform: uppercase;
+  margin-left: -300px;
 }
 
 #Cabecalho .logo a {
@@ -80,6 +81,7 @@ Desabilita Delay nos Dispositivos Mobile
   display: flex;
   list-style: none;
   align-items: center;
+  margin-left: 400px;
 }
 
 .navbar li {
@@ -171,6 +173,12 @@ Desabilita Delay nos Dispositivos Mobile
   }
 }
 
+@media screen and (max-width: 768px) {
+  [data-aos-delay] {
+    transition-delay: 0 !important;
+  }
+}
+
 /**
 * Navegação Mobile  
 */
@@ -182,6 +190,9 @@ Desabilita Delay nos Dispositivos Mobile
   display: none;
   line-height: 0;
   transition: 0.5s;
+  position: absolute;
+  top: 5px;
+  right: 5px;
 }
 
 .mobile-nav-toggle.bi-x {
@@ -189,11 +200,15 @@ Desabilita Delay nos Dispositivos Mobile
 }
 
 @media (max-width: 991px) {
-  .mobile-nav-toggle {
-    display: block;
-  }
-  .navbar ul {
-    display: none;
+  #Cabecalho .logo {
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+    line-height: 1;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    margin-left: -00px;
   }
 }
 
@@ -212,16 +227,16 @@ Desabilita Delay nos Dispositivos Mobile
 .navbar-mobile .mobile-nav-toggle {
   position: absolute;
   top: 15px;
-  right: 15px;
+  right: 5px;
 }
 
 .navbar-mobile ul {
   display: block;
   position: absolute;
-  top: 55px;
+  top: 0px;
   right: 15px;
   bottom: 15px;
-  left: 15px;
+  left: -400px;
   padding: 10px 0;
   background-color: #fff;
   overflow-y: auto;
@@ -297,12 +312,14 @@ Desabilita Delay nos Dispositivos Mobile
 }
 
 #WallPaper h1 {
-  margin: 0 0 10px 0;
+  margin: 0 0 0px 0;
   font-size: 28px;
-  font-weight: 700;
+  font-weight: bold;
   line-height:  56px;
   text-transform: uppercase;
   color: #fff;
+  left: 0;
+  
 }
 
 #WallPaper h2 {
@@ -400,7 +417,7 @@ Desabilita Delay nos Dispositivos Mobile
 }
 
 /*--------------------------------------------------------------
-# Quem Somos
+# Quem 'Somos' - Efeito Fade In Hover Overlay
 --------------------------------------------------------------*/
 
 .quem-somos {
@@ -410,16 +427,12 @@ Desabilita Delay nos Dispositivos Mobile
 .quem-somos h1{
   text-align: center;
   font-size: 58px;
-  font-weight: 700;
+  font-weight: bold;
   line-height: 56px;
   text-transform: uppercase;
   color: rgb(3, 3, 17);
   padding-bottom: 5%;
 }
-
-/*--------------------------------------------------------------
-# Quem Somos - Efeito Fade In Hover Overlay
---------------------------------------------------------------*/
 
 .container{
   padding: 1em 0;
@@ -507,10 +520,645 @@ Desabilita Delay nos Dispositivos Mobile
 
 .conteudo-details p{
   color: #fff;
-  font-size: 17px;
+  font-size: 15px;
   font-family: "Raleway", sans-serif;
 }
 
 .fadeIn-bottom{
   top: 80%;
+}
+
+/*--------------------------------------------------------------
+# Portfólio
+--------------------------------------------------------------*/
+
+.portfolio {
+  background-color: #04142c;
+  padding-left: 0%;
+  width: 100%;
+  display: flex;
+  
+}
+
+#cont1{
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  padding-top: 56.25%;
+  padding-bottom: -50%;
+  margin-left: 1%;
+  margin-top: 10%;
+}
+
+#video1{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  margin-left: 0%;
+}
+
+#portfolio h1{
+  font-size: 36px;
+  font-weight: bold;
+  line-height: 56px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  padding-bottom: 5%;
+  padding-top: 2%;
+  padding-left: 80%;
+}
+
+#text1 h1 {
+  font-size: 36px;
+  margin-left: 150%;
+  margin-top: -130%;
+  width: 200%;
+}
+
+
+.texto1 {
+  margin-bottom: 20;
+  margin-left: 225%;
+  margin-top: 0%;
+  width: 195%;
+  font-size: 23px;
+  color: rgb(255, 255, 255);
+}
+
+#text2 h1 {
+  font-size: 36px;
+  margin-left: -85%;
+  margin-top: -130%;
+  width: 200%;
+  padding-bottom: -100%;
+}
+
+
+.texto2 {
+  margin-bottom: 10%;
+  margin-left: 5%;
+  width: 195%;
+  font-size: 23px;
+  color: rgb(255, 255, 255);
+}
+
+#cont2{
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  padding-top: 56.25%;
+  padding-bottom: -250%;
+  margin-left: 105%;
+  margin-top: 30%;
+}
+
+#video2{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 90%;
+  height: 90%;
+  margin-left: 0%;
+}
+
+#text3 h1 {
+  font-size: 36px;
+  margin-left: 150%;
+  margin-top: -120%;
+  width: 180%;
+  padding-bottom: -100%;
+}
+
+
+.texto3 {
+  margin-bottom: 10%;
+  margin-left: 230%;
+  width: 195%;
+  font-size: 23px;
+  color: rgb(255, 255, 255);
+}
+
+#cont3{
+  position: relative;
+  overflow: hidden;
+  width: 90%;
+  height: 50%;
+  padding-top: 56.25%;
+  padding-bottom: -250%;
+  margin-left: 1%;
+  margin-top: 30%;
+}
+
+#video3{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 93%;
+  margin-left: 0%;
+}
+
+
+#text4 h1 {
+  font-size: 36px;
+  margin-left: -55%;
+  margin-top: -120%;
+  width: 170%;
+  padding-bottom: -100%;
+}
+
+
+.texto4 {
+  margin-bottom: 10%;
+  margin-left: 0%;
+  width: 195%;
+  font-size: 23px;
+  color: rgb(255, 255, 255);
+}
+
+#cont4{
+  position: relative;
+  overflow: hidden;
+  width: 90%;
+  height: 0%;
+  padding-top: 56.25%;
+  padding-bottom: -250%;
+  margin-left: 110%;
+  margin-top: 25%;
+}
+
+#video4{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 93%;
+  margin-left: 0%;
+}
+
+#text5 h1 {
+  font-size: 36px;
+  margin-left: 150%;
+  margin-top: -130%;
+  width: 170%;
+  padding-bottom: -100%;
+}
+
+
+.texto5 {
+  margin-bottom: 10%;
+  margin-left: 230%;
+  width: 195%;
+  font-size: 23px;
+  color: rgb(255, 255, 255);
+}
+
+#cont5{
+  position: relative;
+  overflow: hidden;
+  padding-top: 80%;
+  padding-bottom: -250%;
+  margin-left: 1%;
+  margin-top: 40%;
+}
+
+#img2{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  margin-top: 20%;
+  margin-left: 50%;
+}
+
+#img1{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 40%;
+  height: 100%;
+  margin-left: 0%;
+  margin-top: 20%;
+}
+
+#text6 h1 {
+  font-size: 36px;
+  margin-left: -65%;
+  margin-top: -130%;
+  width: 170%;
+  padding-bottom: -100%;
+}
+
+
+.texto6 {
+  margin-bottom: 10%;
+  margin-left: 0%;
+  width: 195%;
+  font-size: 23px;
+  color: rgb(255, 255, 255);
+}
+
+#cont6{
+  position: relative;
+  overflow: hidden;
+  width: 90%;
+  height: 0%;
+  padding-top: 56.25%;
+  padding-bottom: -250%;
+  margin-left: 110%;
+  margin-top: 40%;
+}
+
+#video6{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 93%;
+  margin-left: 0%;
+}
+
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 600px) {
+  #portfolio h1{
+    font-size: 33px;
+    padding-left: 0%;
+  }
+
+  #cont1{
+    position: relative;
+    overflow: hidden;
+    width: 98%;
+    height: 100%;
+    padding-top: 56.25%;
+    padding-bottom: -50%;
+    margin-left: 1%;
+  }
+  
+  #video1{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    margin-left: 0%;
+  }
+
+  #text1 h1 {
+    font-size: 36px;
+    margin-left: -50%;
+    margin-top: 0%;
+    width: 200%;
+  }
+  
+  
+  .texto1 {
+    margin-bottom: 20;
+    margin-left: 0%;
+    margin-top: 0%;
+    width: 100%;
+    font-size: 23px;
+    color: rgb(255, 255, 255);
+  }
+  
+  #text2 h1 {
+    font-size: 36px;
+    margin-left: -15%;
+    margin-top: 20%;
+    width: 100%;
+    padding-bottom: -100%;
+  }
+  
+  
+  .texto2 {
+    margin-bottom: 10%;
+    margin-left: 0%;
+    width: 100%;
+    font-size: 23px;
+    color: rgb(255, 255, 255);
+  }
+  
+  #cont2{
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 10%;
+    padding-top: 56.25%;
+    padding-bottom: -250%;
+    margin-left: 0%;
+    margin-top: 30%;
+  }
+  
+  #video2{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    margin-left: 0%;
+  }
+
+  #text3 h1 {
+    font-size: 36px;
+    margin-left: 0%;
+    margin-top: 0%;
+    width: 100%;
+    padding-bottom: -100%;
+  }
+  
+  
+  .texto3 {
+    margin-bottom: 10%;
+    margin-left: 0%;
+    width: 100%;
+    font-size: 23px;
+    color: rgb(255, 255, 255);
+  }
+  
+  #cont3{
+    position: relative;
+    overflow: hidden;
+    width: 90%;
+    height: 30%;
+    padding-top: 56.25%;
+    padding-bottom: -250%;
+    margin-left: 1%;
+    margin-top: 30%;
+  }
+  
+  #video3{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 93%;
+    margin-left: 0%;
+  }
+  
+  
+#text4 h1 {
+  font-size: 36px;
+  margin-left: -10%;
+  margin-top: 10%;
+  width: 100%;
+  padding-bottom: -100%;
+}
+
+
+.texto4 {
+  margin-bottom: 10%;
+  margin-left: 0%;
+  width: 100%;
+  font-size: 23px;
+  color: rgb(255, 255, 255);
+}
+
+#cont4{
+  position: relative;
+  overflow: hidden;
+  width: 90%;
+  height: 30%;
+  padding-top: 56.25%;
+  padding-bottom: -250%;
+  margin-left: 0%;
+  margin-top: 30%;
+}
+
+#video4{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  margin-left: 0%;
+}
+
+#text5 h1 {
+  font-size: 36px;
+  margin-left: -2%;
+  margin-top: 0%;
+  width: 100%;
+  padding-bottom: -100%;
+}
+
+
+.texto5 {
+  margin-bottom: 10%;
+  margin-left: 0%;
+  width: 100%;
+  font-size: 23px;
+  color: rgb(255, 255, 255);
+}
+
+#cont5{
+  position: relative;
+  overflow: hidden;
+  width: 90%;
+  height: 0%;
+  padding-top: 56.25%;
+  padding-bottom: -250%;
+  margin-left: 1%;
+  margin-top: 40%;
+}
+
+#video5{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 93%;
+  margin-left: 0%;
+}
+
+#text6 h1 {
+  font-size: 36px;
+  margin-left: 0%;
+  margin-top: 0%;
+  width: 100%;
+  padding-bottom: -100%;
+}
+
+
+.texto6 {
+  margin-bottom: 10%;
+  margin-left: 0%;
+  width: 100%;
+  font-size: 23px;
+  color: rgb(255, 255, 255);
+}
+
+#cont6{
+  position: relative;
+  overflow: hidden;
+  width: 90%;
+  height: 0%;
+  padding-top: 56.25%;
+  padding-bottom: -250%;
+  margin-left: 1%;
+  margin-top: 40%;
+}
+
+#video6{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 93%;
+  margin-left: 0%;
+}
+
+}
+
+.nossa-visao {
+  padding-top: 5%;
+}
+
+.nossa-visao h1{
+  text-align: center;
+  font-size: 58px;
+  font-weight: bold;
+  line-height: 56px;
+  text-transform: uppercase;
+  color: rgb(3, 3, 17);
+  margin-bottom: -10%;
+  margin-left: -10%;
+}
+
+
+.container{
+  margin-top: 11%;
+  padding: 1em 0;
+  float: left;
+  width: 50%;
+}
+@media screen and (max-width: 640px){
+  .container{
+    display: block;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 900px){
+  .container{
+    width: 33.33333%;
+  }
+}
+
+.container .title{
+  color: #1a1a1a;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.cmaterial {
+  position: relative;
+  width: 90%;
+  max-width: 400px;
+  margin: auto;
+  overflow: hidden;
+  margin-top: 25%;
+  margin-left: 0%;
+}
+
+.cmaterial .cmaterial-overlay {
+  background: rgba(0,0,0,0.7);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
+}
+
+.cmaterial:hover .cmaterial-overlay{
+  opacity: 1;
+}
+
+
+.cmaterial-details {
+  position: absolute;
+  text-align: center;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.cmaterial:hover .cmaterial-details{
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+}
+
+.cmaterial-details h3{
+  margin: 0 0 10px 0;
+  font-size: 25px;
+  font-weight: 700;
+  line-height:  56px;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.cmaterial-details p{
+  color: #fff;
+  font-size: 35px;
+  font-family: "Raleway", sans-serif;
+  margin-top: 40%;
+}
+
+.fadeIn-bottom{
+  top: 80%;
+}
+
+#tech{
+  font-size: 26px;
+  line-height: 56px;
+  text-align: center;
+  color: #04142c;
+  padding-bottom: 5%;
+  margin-left: 0%;
 }
