--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,14 +51,18 @@ Desabilita Delay nos Dispositivos Mobile
   font-weight: 700;
   letter-spacing: 2px;
   text-transform: uppercase;
-  margin-left: -90%;
-  margin-top: -30%;
+  position: absolute;
+  top: 3%;
+  left: 40%;
   z-index: 999999;
 }
 
 #Cabecalho .logo a {
   color: #fff;
+  margin-left: -190%;
+  margin-top: 0%;
 }
+
 
 #Cabecalho .logo img {
   max-height: 40px;
@@ -465,6 +469,7 @@ Desabilita Delay nos Dispositivos Mobile
   max-width: 400px;
   margin: auto;
   overflow: hidden;
+  border-radius: 25px;
 }
 
 .conteudo .conteudo-overlay {
@@ -575,8 +580,8 @@ Squad
     text-transform: uppercase;
     font-family: Inter;
     font-style: normal;
-    font-weight: bolder;
-    font-size: 55px;
+    font-weight: bold;
+    font-size: 50px;
     width: 100%;
     line-height: 168px;
 }
@@ -588,8 +593,8 @@ Squad
     left: 820px; 
     font-family: Inter;
     font-style: normal;
-    font-weight: bolder;
-    font-size: 22px;
+    font-weight: bold;
+    font-size: 20px;
     text-align: center;
     width: 100%;
 }
@@ -601,8 +606,8 @@ Squad
     left: 800px; 
     font-family: Inter;
     font-style: normal;
-    font-weight: bolder;
-    font-size: 25px;
+    font-weight: bold;
+    font-size: 22px;
     text-align: center;
     width: 500px;
     color: #E5E5E5;
@@ -617,7 +622,7 @@ Squad
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
-    font-size: 18px;
+    font-size: 15px;
     text-align: justify;
     line-height: 30px;
     width: 650px;
@@ -1179,24 +1184,21 @@ iframe {
 }
 
 .nossa-visao {
-  padding-top: 5%;
-  padding-bottom: 0;
+  padding-top: 50px;
 }
 
 .nossa-visao h1{
   text-align: center;
-  font-size: 58px;
+  font-size: 70px;
   font-weight: bold;
   line-height: 56px;
   text-transform: uppercase;
   color: rgb(3, 3, 17);
-  margin-bottom: -10%;
-  margin-left: -10%;
+  margin: 0px;
 }
 
 
 .container{
-  margin-top: 11%;
   padding: 1em 0;
   float: left;
   width: 50%;
@@ -1227,7 +1229,7 @@ iframe {
   margin: auto;
   overflow: hidden;
   margin-top: 25%;
-  margin-left: 0%;
+  margin-left: 10%;
 }
 
 .cmaterial .cmaterial-overlay {
@@ -1275,7 +1277,7 @@ iframe {
 
 .cmaterial-details h3{
   margin: 0 0 10px 0;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 700;
   line-height:  56px;
   text-transform: uppercase;
@@ -1284,7 +1286,7 @@ iframe {
 
 .cmaterial-details p{
   color: #fff;
-  font-size: 35px;
+  font-size: 30px;
   font-family: "Raleway", sans-serif;
   margin-top: 40%;
 }
@@ -1294,19 +1296,19 @@ iframe {
 }
 
 #tech{
-  font-size: 26px;
+  font-size: 22px;
   line-height: 56px;
   text-align: center;
   color: #04142c;
   padding-bottom: 5%;
-  margin-left: 0%;
+  margin-right: 15%;
 }
 
 /*Contate-nos*/
  
 #fale-conosco {
   position: absolute;
-  top: 1100%;
+  top: 1230%;
   background-color: #001029;
   height: 800px;
   width: 100%;
@@ -1370,6 +1372,7 @@ iframe {
   text-align: center;
   width: 100%;
   background: #ffffff;
+  opacity: 95%;
   color: #000000;
   text-transform: uppercase;
   letter-spacing: 5px;
@@ -1377,7 +1380,10 @@ iframe {
   border-radius: 25px;
   cursor: pointer;
 }
-
+.campo .btn input[type="submit"]:hover{
+  background: #ffffff;
+  opacity: 70%;
+}
 #mensagem_de_erro{
   margin-bottom: 20px;
   background: #fe8b8e;
@@ -1392,3 +1398,148 @@ iframe {
   left: 60%;
   top: 20%;
 }
+
+#contatos {
+  position: absolute;
+  top: 8100px;
+  left: 0px;
+  height: 700px;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: white;
+
+}
+
+#textoContatos {
+ color: #001029;
+ position: relative;
+ top: -350px;
+ height: 100%;
+ left: 10px;
+ width: 50%;
+ display: inline-block;
+ padding-left: 8px;
+ padding-right: 8px;
+ font-family: Inter;
+ font-size: 57px;
+ font-weight: bolder;
+ text-align: center;
+}
+
+.icones {
+color: white;
+background-color: #001029;
+position: relative;
+display: inline-block;
+top: 0%;
+width: 670px;
+height: 950px;
+} 
+
+.socialmidias {
+  padding: 5px;
+}
+
+.img-icon {
+  
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.icones ul {
+  list-style: none;
+}
+
+li {
+  padding-top:15px;
+}
+
+
+.socialmidias {
+  width: 50px;
+  height: 50px;
+}
+
+.linkedin-icon img{
+  width: 10px;
+  height: 10px;
+}
+
+.titulo {
+  color:#001029;
+  font-family: Inter;
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px;
+  padding-top: 6px;
+  margin-top: 0px;
+  margin-bottom: 0;
+  background-color: white;
+  opacity: 95%;
+  width: 100%;
+  height: 45px;
+  
+}
+
+
+/* RODAPÉ */
+footer{
+  font-family: 'Inter', sans-serif;
+  color: rgba(255, 255, 255, 0.84);
+  position: relative;
+  top: 2355px;
+  height:100px;
+}
+
+.footer{
+  background: #001029;
+  opacity: 95%;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  height: 100px;
+
+}
+.footer h2{
+  position: absolute;
+  text-align: center;
+  font-size: 40px;
+  height: auto;
+  left: 40%;
+  padding-top: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.menu{
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem 0 3rem 0;
+  position: absolute;
+  height: 110px;
+  left: 38%;
+}
+.menu li{
+margin: 0 10px;
+margin-right: 15px;
+padding-right: 15px;
+border-right: 1px solid rgba(255, 255, 255, .3);
+color: #999999;
+font-size: 13px;
+font-weight: 400;
+}
+
+.bottom{
+  position: absolute;
+  background: #001029;
+  width: 100vw;
+  padding: 20px 0;
+  text-align: center;
+  font-weight: bold;
+  height:50px;
+}
+
